<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:menuCategory="container">
        <item
            android:id="@+id/searchAccount"
            android:icon="@drawable/search_account"
            android:title="@string/search"
            app:actionViewClass="androidx.appcompat.widget.SearchView"
            app:showAsAction="collapseActionView|ifRoom"
        />
        <item
            android:id="@+id/favoritesHome"
            android:icon="@drawable/favorite_home"
            android:title="@string/favorithome"
            app:showAsAction="always" />
        <item
            android:id="@+id/darkmodeHome"
            android:icon="@drawable/darkmode"
            android:title="@string/darkmode"
            app:showAsAction="always" />
    </group>
</menu>